--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,6 +1,3 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
 name: Node.js CI
 
 on:
@@ -28,9 +25,9 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build --if-present
-    - run: pm2 restart index.js
     - name: Check commit message for 'production'
-      run: echo "::set-env name=DEPLOY_FLAG::$(if git log --format=%B -n 1 $GITHUB_SHA | grep -qi 'production'; then echo true; else echo false; fi)"
+      id: check_production
+      run: echo "::set-output name=deploy_flag::$(if git log --format=%B -n 1 $GITHUB_SHA | grep -qi 'production'; then echo true; else echo false; fi)"
     - name: Deploy
-      if: env.DEPLOY_FLAG == 'true'
+      if: steps.check_production.outputs.deploy_flag == 'true'
       run: pm2 restart index.js
